--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-  
+
+    <div class="container" id="test">
+        <div class="row">
+            <div class="col-sm-6 col-lg-6">
+                to jest treść paragrafu 1
+            </div>
+            <div class="col-sm-6 col-lg-6">
+                to jest treść paragrafu 2
+            </div>
+        </div>
+        
+    </div>
+
 
 
 
@@ -26,6 +40,7 @@
 
     <!-- Skrypt jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <!-- Custom Scripts    -->
     <script src="js/main.js"></script>
 </body>
