--- a/index.html
+++ b/index.html
@@ -18,24 +18,109 @@
 
 <body>
 
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" ariaexpanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logo</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navigation">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+
     <div class="container" id="test">
         <div class="row">
-            <div class="col-sm-6 col-lg-6">
+            <div class="col-sm-6 col-lg-6 text-center">
                 to jest treść paragrafu 1
             </div>
             <div class="col-sm-6 col-lg-6">
                 to jest treść paragrafu 2
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-sm-3 col-lg-3">
+                to jest treść paragrafu 3
+            </div>
+            <div class="col-sm-4 col-lg-offset-3 col-lg-4">
+                to jest treść paragrafu 4
+            </div>
+            <div class="col-sm-3 col-lg-3">
+                to jest treść paragrafu 5
+            </div>
+        </div>
+
     </div>
 
 
+    <!--Pokaz slajdów-->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <div class="carousel-caption">
+                    To jest pierwszy slide
+                    <button class="btn btn-default">Zobacz</button>
+                </div>
+            </div>
+            <div class="item">
+                <div class="carousel-caption">
+                    To jest drugi slide
+                    <button class="btn btn-default">Zobacz</button>
+                </div>
+            </div>
+            <div class="item">
+                <div class="carousel-caption">
+                    To jest trzeci slide
+                    <button class="btn btn-default">Zobacz</button>
+                </div>
+            </div>
+            <div class="item">
+                <div class="carousel-caption">
+                    To jest czwarty slide
+                    <button class="btn btn-default">Zobacz</button>
+                </div>
+            </div>
+            <div class="item">
+                <div class="carousel-caption">
+                    To jest piąty slide
+                    <button class="btn btn-default">Zobacz</button>
+                </div>
+            </div>
+        </div>
 
-
-
-
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 
     <!-- Skrypt jQuery -->
